# MaCh3Tutorial

./: .gitignore  .mailmap  CMakeLists.txt  LICENSE.txt  README.md  Test.root  data.js  mailmap.txt  pyproject.toml  requirements.txt
.github/: .spellcheck.yml  CODEOWNERS  CONTRIBUTING.md  auto_assign.yml  labeler.yml  personal_dictionary.txt  release.yml
.github/workflows/: .BumpVersion.yml.kate-swp  Benchmark.yml  BumpVersion.yml  CDImage.yml  CIBenchmark.yml  CIPythonValidations.yml  CIValidations.yml  CodeQL.yml  Greetings.yml  Label.yml  Linter.yml  MakeRelase.yml  Review.yml  SpellCheck.yml  Squash.yml  Stale.yml
Apps/: CMakeLists.txt  CovarianceValidations.cpp  FitterValidations.cpp  NuMCMCconversion.cpp  NuMCMCvalidations.sh  SplineValidations.cpp  TestNuMCMC.py
CIValidations/: BinningValidations.cpp  CMakeLists.txt  CovarianceValidations.cpp  FitterValidations.cpp  LLHValidation.cpp  MaCh3CLI  MaCh3ModeValidations.cpp  NuMCMCconversion.cpp  NuMCMCvalidations.sh  NuOscillatorInterfaceValidations.cpp  PredictiveValidations.cpp  README.md  SamplePDFValidations.cpp  SigmaVarFDValidation.cpp  SigmaVarLegacyValidations.cpp  SigmaVarValidation.cpp  SigmaVarValidations.cpp  SplineValidations.cpp  SplineValidationsTimeMetrics.cpp  TestNuMCMC.py  pValueValidations.cpp
CIValidations/Benchmark/: CMakeLists.txt  MaCh3Benchmark.cpp
CIValidations/NuDock/: CMakeLists.txt  RunNuDockServer.cpp
CIValidations/PythonTests/: SystematicModel_EventByEvent.yaml  conftest.py  requirements.txt  test_fitter_sample_pdf.py  test_fitter_stat_only.py  test_spline_monolith.py  test_splines.py
CIValidations/PythonTests/pure_python/: README.md  test_fitter_sample_pdf.py  test_fitter_stat_only.py  test_splines.py
CIValidations/PythonTests/tutorial_bindings/: README.md  test_tutorial_sample_handler.py
CIValidations/Scripts/: CreateBinnedSplineFile.cpp  CreateBinnedSplineFile_cpp.d  CreateBinnedSplineFile_cpp_ACLiC_dict_rdict.pcm  CreateSplineFile.cpp  FilterFiles.cpp
CIValidations/SplinePlotting/: CMakeLists.txt  SplinePlotting.cpp
CIValidations/TestOutputs/: BinningOut.txt  CovarianceOut.txt  LLHOut.txt  MaCh3ModeOut.txt  NuOscOut.txt  Predictive.txt  PredictiveToys.root  SampleOut.txt  SigmaVarOut.txt  SplineMonoOut.txt
CIValidations/UnitTests/: CMakeLists.txt  binning_parser_tests.cpp  histogram_tests.cpp  manager_tests.cpp  statistical_tests.cpp
Doc/DockerFiles/Alma9/: Dockerfile
Inputs/: CovarianceOut.txt  FitterConfig.yaml  ManagerTest.yaml  NuWro_FlatTree.root  Osc_Test.root  Osc_Test.yaml  PCATest.yaml  SamplePDF_Tutorial.yaml  SamplePDF_Tutorial_ATM.yaml  SplineMonoOut.txt  SplineValidations.yaml  SystematicModel.yaml  SystematicsTest.yaml
Inputs/MC/: BinnedSplinesTutorialInputs2D.root  NuWro_FlatTree_ATM.root  SplineFile.root
Inputs/NuOscillator/: CUDAProb3.yaml  ExampleAtmosphericBinning.root  NuFASTLinear.yaml  Prob3ppLinear.yaml
MaCh3Plugins/: CMakeLists.txt  MCMCTutorialPlugin.cpp  MCMCTutorialPlugin.hpp
Mach3Plugins/: CMakeLists.txt  MCMCTutorialPlugin.cpp  MCMCTutorialPlugin.hpp
SamplesTutorial/: CMakeLists.txt  SampleHandlerTutorial.cpp  SampleHandlerTutorial.h  StructsTutorial.h
Scripts/: FilterFiles.cpp
SplinesTutorial/: BinnedSplinesTutorial.cpp  BinnedSplinesTutorial.h  CMakeLists.txt
Tutorial/: CMakeLists.txt  KinemDistributionTutorial.cpp  LLHMapTutorial.cpp  LLHScanTutorial.cpp  MCMCTutorial.cpp  PredictiveTutorial.cpp  RunNuDockClient.cpp  RunNuDockServer.cpp  SigmaVarTutorial.cpp  TutorialDiagConfig.yaml  TutorialEventRates.cpp
TutorialConfigs/: FitterConfig.yaml  MaCh3Modes.yaml
TutorialConfigs/CovObjs/: OscillationModel.yaml  PCATest.yaml  SystematicModel.yaml
TutorialConfigs/MC/: BinnedSplinesTutorialInputs2D.root  NuWro_FlatRNTuple_ND_CC1pip.root  NuWro_FlatRNTuple_ND_CCPi0.root  NuWro_FlatTree.root  NuWro_FlatTree_ND_CC0pi.root  NuWro_FlatTree_ND_CC1pip.root  NuWro_FlatTree_ND_CCPi0.root  NuWro_FlatTree_ND_NC0pi.root  NuWro_FlatTree_ND_NC1pi0.root  NuWro_nue_x_nue_FlatTree_ATM.root  NuWro_nue_x_nue_FlatTree_Beam.root  NuWro_nue_x_numu_FlatRNTuple_ATM.root  NuWro_nue_x_numu_FlatTree_ATM.root  NuWro_nuebar_x_nuebar_FlatRNTuple_ATM.root  NuWro_nuebar_x_nuebar_FlatTree_ATM.root  NuWro_nuebar_x_nuebar_FlatTree_Beam.root  NuWro_nuebar_x_numubar_FlatRNTuple_ATM.root  NuWro_nuebar_x_numubar_FlatTree_ATM.root  NuWro_numu_x_nue_FlatTree_ATM.root  NuWro_numu_x_nue_FlatTree_Beam.root  NuWro_numu_x_numu_FlatRNTuple_ATM.root  NuWro_numu_x_numu_FlatTree_ATM.root  NuWro_numu_x_numu_FlatTree_Beam.root  NuWro_numubar_x_nuebar_FlatRNTuple_ATM.root  NuWro_numubar_x_nuebar_FlatTree_ATM.root  NuWro_numubar_x_nuebar_FlatTree_Beam.root  NuWro_numubar_x_numubar_FlatRNTuple_Beam.root  NuWro_numubar_x_numubar_FlatTree_ATM.root  NuWro_numubar_x_numubar_FlatTree_Beam.root
TutorialConfigs/NuOscillator/: CUDAProb3.yaml  CUDAProb3Linear.yaml  NuFASTLinear.yaml  Prob3ppLinear.yaml
TutorialConfigs/ReweightingConfigs/: PDG_2023_1D.yaml
TutorialConfigs/Samples/: SampleHandler_NuDock.yaml  SampleHandler_Tutorial.yaml  SampleHandler_Tutorial_ATM.yaml  SampleHandler_Tutorial_ND.yaml  SamplePDF_Tutorial.yaml  SamplePDF_Tutorial_ATM.yaml  TutorialBinning.yaml
Utils/: CMakeLists.txt  Comparison.cpp  Comparison.h  SplineMonoUtils.cpp  SplineMonoUtils.h
cmake/Modules/: CIValidations.cmake  mach3tutorial-config.cmake
cmake/Templates/: MaCh3TutorialConfig.cmake.in  mach3tutorial-config.in  setup.MaCh3Tutorial.sh.in  setup.MaCh3Validations.sh.in
dev/bench/: data.js
plotting/: 1DPosterior-tutorial.py  LLHScan-plotting-tutorial.py  MCMC-plotting-tutorial.py  PlottingConfig.yaml  StyleConfig.yaml  universalTranslator.yaml
python/: CMakeLists.txt  PyMaCh3Example.ipynb  PyMaCh3Example.py  module.cpp  pyMaCh3.cpp  samplesTutorial.cpp  wrapper.cpp
python/pyMaCh3Tutorial/: __init__.py
samplePDF/: CMakeLists.txt  SampleHandlerTutorial.cpp  SampleHandlerTutorial.h  StructsTutorial.h  samplePDFTutorial.cpp  samplePDFTutorial.h
splines/: BinnedSplinesTutorial.cpp  BinnedSplinesTutorial.h  CMakeLists.txt
